Name: jt
Version: 0.0.1
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Ian O Connell
Author: Ian O Connell
Maintainer: hs@ianoc.net
Bug-Reports: https://github.com/ianoc/jt/issues
Synopsis: cmd line for interacting with hadoop 2.x Rest API's/Job Tracker
Description: @jt@ is something
Source-Repository head
    Type: git
    Location: https://github.com/ianoc/jt

Library
    HS-Source-Dirs: src
    Build-Depends:
        base                 >= 4.5     && < 5  ,
        async                >= 2.0.0.0 && < 2.1,
        clock                >= 0.4.1.2 && < 0.6,
        directory            >= 1.0.7   && < 1.3,
        foldl                >= 1.1     && < 1.2,
        hostname                           < 1.1,
        managed                            < 1.1,
        process              >= 1.0.1.1 && < 1.3,
        system-filepath      >= 0.3.1   && < 0.5,
        system-fileio        >= 0.2.1   && < 0.4,
        stm                                < 2.5,
        temporary                          < 1.3,
        text                               < 1.3,
        time                               < 1.6,
        transformers         >= 0.2.0.0 && < 0.5,
        optparse-applicative >= 0.11    && < 0.13,
        optional-args        >= 1.0     && < 2.0,
        aeson                >= 0.8.0.2   && < 1.0.0.0,
        HTTP,
        network-uri,
        bytestring,
        MissingH
    if os(windows)
        Build-Depends: Win32 >= 2.2.0.1 && < 2.4
    else
        Build-Depends: unix  >= 2.5.1.0 && < 2.8
    Exposed-Modules:
        Jt
      , Jt.App
      , Jt.Net
      , Jt.Job
    GHC-Options: -O2 -Wall
    Default-Language: Haskell2010


executable jt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    ,bytestring
                     , jt
  default-language:    Haskell2010
