Name: jt
Version: 0.0.1
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Ian O Connell
Author: Ian O Connell
Maintainer: hs@ianoc.net
Bug-Reports: https://github.com/ianoc/jt/issues
Synopsis: cmd line for interacting with hadoop 2.x Rest API's/Job Tracker
Description: @jt@ is something
Source-Repository head
    Type: git
    Location: https://github.com/ianoc/jt

Library
    HS-Source-Dirs: src
    Build-Depends:
        base                   >= 4.5
        , text                  < 1.3
        , optparse-applicative >= 0.11
        , aeson                >= 0.8.0.2
        , split                >= 0.2.0
        , wreq
        , mtl                  >= 2.2.0
        , system-filepath >= 0.4.0.0
        , lens
        , bytestring
        , http-client
        , MissingH
        , turtle
        , containers >= 0.5.6
        , attoparsec
        , http-types
        , time
    Exposed-Modules:
        Jt
      , Jt.Net
      , Jt.QueryParameters
      , Jt.Server
      , Jt.Command.All
      , Jt.Command.Show
      , Jt.Command.Jobs
    Other-Modules:
        Jt.Command.Utils
      , Jt.App.Info
      , Jt.DetailedJob
      , Jt.Job
      , Jt.App.Listing
      , Jt.Command.Details
      , Jt.History.Info
      , Jt.History.Listing
    GHC-Options: -O2 -Wall
    Default-Language: Haskell2010


executable jt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , jt
  default-language:    Haskell2010
